parser/Absyn.h

/* C++ Abstract Syntax Interface.*/

/********************   TypeDef Section    ********************/

typedef int Integer;
typedef char Char;
typedef double Double;
typedef char* String;
/********************   Forward Declarations    ***********************/
struct Graph_;
typedef struct Graph_ *Graph;
struct Binding_;
typedef struct Binding_ *Binding;
struct GraphBinding_;
typedef struct GraphBinding_ *GraphBinding;
struct AttrVal_;
typedef struct AttrVal_ *AttrVal;
struct AttrName_;
typedef struct AttrName_ *AttrName;
struct Attr_;
typedef struct Attr_ *Attr;
struct ListAttr_;
typedef struct ListAttr_ *ListAttr;
struct Vertex_;
typedef struct Vertex_ *Vertex;
struct Name_;
typedef struct Name_ *Name;
struct ListName_;
typedef struct ListName_ *ListName;
/********************   Abstract Syntax Classes    ********************/

struct Graph_
{
  enum { is_GNil, is_GVertex, is_GVar, is_GNominate, is_GEdgeAnon, is_GEdgeNamed, is_GRuleAnon, is_GRuleNamed, is_GSubgraph, is_GTensor } kind;
  union
  {
    struct { Graph graph_; Vertex vertex_; } gVertex_;
    struct { Graph graph_; LVar lvar_; } gVar_;
    struct { Binding binding_; } gNominate_;
    struct { Binding binding_1, binding_2; } gEdgeAnon_;
    struct { Binding binding_1, binding_2; Name name_; } gEdgeNamed_;
    struct { Graph graph_1, graph_2; } gRuleAnon_;
    struct { Graph graph_1, graph_2; Name name_; } gRuleNamed_;
    struct { GraphBinding graphbinding_; } gSubgraph_;
    struct { Graph graph_1, graph_2; } gTensor_;
  } u;
};
struct Binding_
{
  enum { is_VBind } kind;
  union
  {
    struct { Graph graph_; LVar lvar_; Vertex vertex_; } vBind_;
  } u;
};
struct GraphBinding_
{
  enum { is_GBind } kind;
  union
  {
    struct { Graph graph_1, graph_2; UVar uvar_; } gBind_;
  } u;
};
struct AttrVal_
{
  enum { is_AttributeValue } kind;
  union
  {
    struct { LVar lvar_; } attributeValue_;
  } u;
};
struct AttrName_
{
  enum { is_AttributeName } kind;
  union
  {
    struct { LVar lvar_; } attributeName_;
  } u;
};
struct Attr_
{
  enum { is_AttributePair } kind;
  union
  {
    struct { AttrName attrname_; AttrVal attrval_; } attributePair_;
  } u;
};
struct ListAttr_
{
  enum { is_EmptyAttrList, is_AttrList } kind;
  union
  {
    struct { Attr attr_; ListAttr listattr_; } attrList_;
  } u;
};
struct Vertex_
{
  enum { is_VName } kind;
  union
  {
    struct { ListAttr listattr_; Name name_; } vName_;
  } u;
};
struct Name_
{
  enum { is_NameWildcard, is_NameVVar, is_NameGVar, is_NameQuoteGraph, is_NameQuoteVertex } kind;
  union
  {
    struct { LVar lvar_; } nameVVar_;
    struct { UVar uvar_; } nameGVar_;
    struct { Graph graph_; } nameQuoteGraph_;
    struct { Vertex vertex_; } nameQuoteVertex_;
  } u;
};
struct ListName_
{
  Name name_;
  ListName listname_;
};