src/bindings.rs

unsafe extern "C" {
    pub fn printBinding(p: Binding) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn printGraphBinding(p: GraphBinding) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn printAttrVal(p: AttrVal) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn printAttrName(p: AttrName) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn printAttr(p: Attr) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn printListAttr(p: ListAttr) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn printVertex(p: Vertex) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn printName(p: Name) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn printListName(p: ListName) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn ppGraph(p: Graph, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppBinding(p: Binding, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppGraphBinding(p: GraphBinding, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppAttrVal(p: AttrVal, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppAttrName(p: AttrName, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppAttr(p: Attr, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppListAttr(p: ListAttr, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppVertex(p: Vertex, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppName(p: Name, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppListName(p: ListName, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn showGraph(p: Graph) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showBinding(p: Binding) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showGraphBinding(p: GraphBinding) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showAttrVal(p: AttrVal) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showAttrName(p: AttrName) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showAttr(p: Attr) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showListAttr(p: ListAttr) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showVertex(p: Vertex) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showName(p: Name) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn showListName(p: ListName) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn shGraph(p: Graph);
}
unsafe extern "C" {
    pub fn shBinding(p: Binding);
}
unsafe extern "C" {
    pub fn shGraphBinding(p: GraphBinding);
}
unsafe extern "C" {
    pub fn shAttrVal(p: AttrVal);
}
unsafe extern "C" {
    pub fn shAttrName(p: AttrName);
}
unsafe extern "C" {
    pub fn shAttr(p: Attr);
}
unsafe extern "C" {
    pub fn shListAttr(p: ListAttr);
}
unsafe extern "C" {
    pub fn shVertex(p: Vertex);
}
unsafe extern "C" {
    pub fn shName(p: Name);
}
unsafe extern "C" {
    pub fn shListName(p: ListName);
}
unsafe extern "C" {
    pub fn ppUVar(s: String, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppLVar(s: String, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn shUVar(s: String);
}
unsafe extern "C" {
    pub fn shLVar(s: String);
}
unsafe extern "C" {
    pub fn ppInteger(n: Integer, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppDouble(d: Double, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppChar(c: Char, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppString(s: String, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ppIdent(s: String, i: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn shInteger(n: Integer);
}
unsafe extern "C" {
    pub fn shDouble(d: Double);
}
unsafe extern "C" {
    pub fn shChar(c: Char);
}
unsafe extern "C" {
    pub fn shString(s: String);
}
unsafe extern "C" {
    pub fn shIdent(s: String);
}
unsafe extern "C" {
    pub fn bufEscapeS(s: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn bufEscapeC(c: ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn bufAppendS(s: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn bufAppendC(c: ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn bufReset();
}
unsafe extern "C" {
    pub fn resizeBuffer();
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct __locale_data {
    pub _address: u8,
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __va_list_tag"][::std::mem::size_of::<__va_list_tag>() - 24usize];
    ["Alignment of __va_list_tag"][::std::mem::align_of::<__va_list_tag>() - 8usize];
    ["Offset of field: __va_list_tag::gp_offset"]
        [::std::mem::offset_of!(__va_list_tag, gp_offset) - 0usize];
    ["Offset of field: __va_list_tag::fp_offset"]
        [::std::mem::offset_of!(__va_list_tag, fp_offset) - 4usize];
    ["Offset of field: __va_list_tag::overflow_arg_area"]
        [::std::mem::offset_of!(__va_list_tag, overflow_arg_area) - 8usize];
    ["Offset of field: __va_list_tag::reg_save_area"]
        [::std::mem::offset_of!(__va_list_tag, reg_save_area) - 16usize];
};
impl Default for __va_list_tag {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
